--- a/blogger-system/package.json
+++ b/blogger-system/package.json
@@ -19,7 +19,8 @@
     "mavon-editor": "^2.7.7",
     "vue": "^2.5.2",
     "vue-cropper": "^0.5.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
