--- a/blog-server/package.json
+++ b/blog-server/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "debug": "^4.1.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
+    "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
+    "koa-formidable": "^1.1.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
